# Real-Time-Ride-Demand-Forecasting-and-Dynamic-Pricing-Guardrails

./: .env  .gitignore  Dockerfile  Makefile  README.md  ml_mlops_phase1.patch  pyproject.toml  requirements.txt  validation_steps.txt
.github/workflows/: ci.yml
configs/: app.yaml  champion_policy.yaml  eda.yaml  eda_thresholds.yaml  logging.yaml  model_search_space.yaml  multiplier_rules.yaml  pricing_policy.yaml  rate_limit_rules.yaml  reason_codes.yaml  split_policy.yaml  training.yaml
data/reference/: holidays_us_nyc.csv
docs/api/: api_overview.md  example_requests.md  plain_language_fields.md  response_contracts.md  versioning_policy.md
docs/dashboards/: dashboard_demo_script.md  tooltips_catalog.md  user_dashboard_guide.md
docs/eda/: assumptions_register.yaml  data_dictionary_addendum.md  fallback_policy.md  phase3_report.md
docs/pricing_guardrails/: guardrail_policy.md  market_evaluation_queries.md  pricing_output_contract.md  pricing_overview.md  reason_code_catalog.md
docs/scoring/: confidence_method.md  forecast_table_contract.md  scoring_overview.md
docs/training/: champion_selection_policy.md  evaluation_protocol.md  model_card_template.md  training_report_template.md
grafana/: README.md
infra/: docker-compose.yml
scripts/: bootstrap_local.sh  check_api_contracts.py  check_phase1_gate.py  check_plain_language_fields.py  fetch_tlc_sample.py  wait_for_postgres.sh
sql/api/: create_api_contract_registry.sql  create_api_request_log.sql  diagnostics_api_queries.sql  forecast_api_queries.sql  (+2 more)
src/: __init__.py
tests/: conftest.py
(+308 files in other folders)
