[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "real-time-ride-demand-forecasting-and-dynamic-pricing-guardrails"
version = "0.1.0"
description = "Production-style ML and MLOps platform foundation for real-time ride demand forecasting and dynamic pricing guardrails"
requires-python = ">=3.11,<3.12"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
mypy_path = "src"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q --cov=src --cov-report=term-missing"
markers = [
    "integration: integration tests that may depend on external services",
]
